--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@googlemaps/react-wrapper": "^1.2.0",
-    "@mui/icons-material": "^7.3.4",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
+    "@mui/x-date-pickers": "^8.24.0",
     "axios": "^1.5.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "mui-tel-input": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.4",
@@ -31,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "baseline-browser-mapping": "^2.9.14"
   }
 }
