--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,14 +1,14 @@
-name: 🎨 Deploy React Frontend to cPanel
+name: 🧪 Deploy React Frontend (DEV) to cPanel
 
 on:
   push:
-    branches: [ main ]
+    branches: [ dev ]
   workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: 📥 Checkout code
       uses: actions/checkout@v3
@@ -22,35 +22,20 @@ jobs:
       run: npm install
       working-directory: ./frontend
 
-    - name: 🏗️ Build React app
+    - name: 🏗️ Build React app (DEV)
       run: npm run build
       working-directory: ./frontend
       env:
         CI: false
-        REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
+        REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL_DEV }}
         REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
 
-    - name: 📁 Verify build files
-      run: |
-        echo "📂 Build directory contents:"
-        ls -la frontend/build/
-        echo "✅ Build completed successfully!"
-
-    - name: 🚀 Deploy to cPanel via FTP
+    - name: 🚀 Deploy DEV to cPanel via FTP
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./frontend/build/
-        server-dir: ./public_html/
+        server-dir: ./public_html/dev.azholidays.com.sg/
         dangerous-clean-slate: true
-        exclude: |
-          **/.git*
-          **/.git*/**
-          **/node_modules/**
-
-    - name: ✅ Deployment Success
-      run: |
-        echo "🎉 Frontend successfully deployed to cPanel!"
-        echo "🌐 Your React app is now live at: https://azholidays.com.sg"
